<resources>
    <string name="app_name">Null</string>
    <string name="splashText">به بهترین ها فکر کنید! خوش آمدید</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="icon_of_logo">Icon Of Logo</string>
    <string name="bg_image_splash">Background Of Splash Image</string>
    <string name="signUp">عضویت</string>
    <string name="tv_createNewAccount">ایجاد حساب کاربری جدید</string>
    <string name="userName">نام و نام خانوادگی</string>
    <string name="userEmail">ایمیل</string>
    <string name="password">کلمه عبور</string>
    <string name="repetition_password">تکرار کلمه عبور</string>
    <string name="signUp_tv_button">عضویت</string>
    <string name="tv_ask_account">حساب کاربری دارید؟</string>
    <string name="tv_signIn">!وارد شوید</string>
    <string name="group_icon">Group Icon</string>
    <string name="tv_login">ورود</string>
    <string name="tv_login_to_account">ورود به حساب کاربری</string>
    <string name="tv_button_email_or_userName">نام کاربری (ایمیل)</string>
    <string name="tv_ask_no_account">حساب کاربری ندارید ؟</string>
    <string name="tv_be_member">!عضو شوید</string>
    <string name="tv_profile">پروفایل</string>
    <string name="tv_follow_button">دنبال کردن</string>
    <string name="tv_follower">دنبال کننده</string>
    <string name="tv_post">نوشته</string>
    <string name="tv_name">علی خرامان</string>
    <string name="tv_summary">طراح رابط و تجربه کاربری</string>
    <string name="tv_number_posts">255</string>
    <string name="tv_number_followers">5465</string>
    <string name="image_of_profile_desc">Image Of Profile</string>
    <string name="date_of_post">3 روز پیش</string>
    <string name="tv_item_description">اپل در طول اعلام نتایج درآمد سه‌ ماهه سوم خود در روز پنج شنبه گفت که هیات‌ مدیره شرکت یک تجزیه سهام چهار به یک را تصویب کرده‌ است</string>
    <string name="tv_item_title">کاهش درآمدهای گوگل در سه‌ماهه دوم سال ۲۰۲۰ طی ۱۶ سال اخیر بی‌سابقه بوده است</string>
    <string name="numberOfFollowers">2.5k</string>
    <string name="numberOfComments">دیدگاه 20</string>
    <string name="menu_icon_post">Menu Icon</string>
    <string name="tag_icon_post">Tag Icon</string>
    <string name="like_icon_post">Like Icon</string>
    <string name="comment_icon_post">Comment Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_page">صفحه اول</string>
    <string name="emptyFields">خطا!تمامی فیلدها را پرکنید.</string>
    <string name="emptyEditText">خطا! این کادر را پر کنید</string>
    <string name="tv_posts">نوشته ها</string>
    <string name="tv_interest">علاقه مندی</string>
    <string name="tv_favorite">علاقه مندی</string>
    <string name="searchArticle">جستجو مقاله</string>
    <string name="hint_box_search">جستجو مقاله</string>
    <string name="best_article">برترین مقالات</string>
    <string name="foryou">برای شما</string>
    <string name="bors">بورس</string>
    <string name="eqtsad">اقتصاد</string>
    <string name="sarmaye">سرمایه گذاری</string>
    <string name="saham">سهام</string>
    <string name="article_text_sample" >اپل در طول اعلام نتایج درآمد سه‌ ماهه سوم خود در روز پنج شنبه گفت که هیات‌ مدیره شرکت یک تجزیه سهام چهار به یک را تصویب کرده‌ استاپل در طول اعلام نتایج درآمد سه‌ ماهه سوم خود در روز پنج شنبه گفت که هیات‌ مدیره شرکت یک تجزیه سهام چهار به یک را تصویب کرده‌ است</string>
    <string name="text_send_comment">ارسال دیدگاه</string>
    <string name="article_related">مقالات مرتبط</string>
    <string name="article_single">تک مقاله</string>
    <string name="tv_economy">اقتصاد</string>
    <string name="tv_edit_article">ویرایش مقاله</string>
    <string name="tv_delete_article">حذف مقاله</string>
    <string name="tv_share_article">اشتراک مقاله</string>
    <string name="hint_text_send_comment">دیدگاه خود را اینجا بنویسید</string>
    <string name="tv_write_article">نوشتن مقاله</string>
    <string name="tv_draft">پیش نویس</string>
    <string name="tv_title_in_write_article">عنوان</string>
    <string name="tv_text_of_article">متن مقاله</string>
    <string name="tv_add_attach">افزودن پیوست</string>
    <string name="tv_submit_article">انتشار مقاله</string>
    <string name="add_media">افزودن عکس ویدیو یا صدا</string>
    <string name="tv_keyword">کلمه کلیدی :</string>
    <string name="tv_upload_file">بارگذاری فایل</string>
    <string name="tv_back">back to previous page</string>
    <string name="emptyString" />
    <string name="back_message">برای بازگشت دوباره دکمه خروج را فشار دهید</string>
    <string name="for_you">برای شما</string>
    <string name="profileWasFollow">دنبال میکنید</string>
    <string name="comments_tv">دیدگاه کاربران</string>

</resources>