<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="293dp"
    android:background="#ffffff"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_prof_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_of_profile_desc"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"

            app:layout_constraintTop_toBottomOf="@id/guidelineTop"

            android:src="@drawable/prof_image" />

        <TextView
            android:id="@+id/item_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tv_name"
            android:textAlignment="viewEnd"
            android:textColor="#363636"
            android:textSize="14sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toStartOf="@id/item_prof_image"
            app:layout_constraintTop_toTopOf="@id/item_prof_image"


            />

        <TextView
            android:id="@+id/tv_date_of_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="1dp"
            android:text="@string/date_of_post"
            android:textAlignment="viewEnd"
            android:textColor="#9e9e9e"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/item_prof_image"

            app:layout_constraintEnd_toStartOf="@id/item_prof_image"
            app:layout_constraintTop_toBottomOf="@id/item_tv_name"

            />

        <TextView
            android:id="@+id/tv_title_prof"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"

            android:gravity="end"
            android:lineSpacingExtra="10sp"
            android:text="@string/tv_item_title"
            android:textAlignment="viewEnd"
            android:textColor="#363636"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/item_prof_image"

            />

        <TextView
            android:id="@+id/tv_desc_prof"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="end"
            android:lineSpacingExtra="10sp"
            android:text="@string/tv_item_description"
            android:textAlignment="viewEnd"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/tv_title_prof" />

        <ImageView
            android:id="@+id/item_icon_menu_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_icon_post"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toTopOf="@id/item_prof_image"

            app:srcCompat="@drawable/ic_icon_menu" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/tag_icon_post"

            app:layout_constraintStart_toEndOf="@id/item_icon_menu_post"
            app:layout_constraintTop_toTopOf="@id/item_prof_image"

            app:srcCompat="@drawable/ic_bookmark" />

        <ImageView
            android:id="@+id/like_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:contentDescription="@string/like_icon_post"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/guidelineBottom"

            app:srcCompat="@drawable/ic_like" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:lineSpacingExtra="10sp"
            android:text="@string/numberOfFollowers"
            android:textColor="#9e9e9e"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/like_post"
            app:layout_constraintEnd_toStartOf="@id/like_post"

            app:layout_constraintTop_toTopOf="@id/like_post" />

        <TextView
            android:id="@+id/tv_number_of_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:lineSpacingExtra="10sp"
            android:text="@string/numberOfComments"
            android:textColor="#9e9e9e"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/like_post"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft"
            app:layout_constraintTop_toTopOf="@id/like_post"

            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/comment_icon_post"
            app:layout_constraintStart_toEndOf="@id/tv_number_of_comments"
            app:layout_constraintTop_toTopOf="@id/like_post"


            app:srcCompat="@drawable/ic_comment" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04136253" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96107054" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06225681" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8088737" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>