<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    android:layoutDirection="rtl">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarWriteArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/tv_back"
                android:src="@drawable/ic_arrow_right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tv_write_article"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:text="@string/tv_draft"
                android:textColor="@color/white"


                android:textSize="16sp" />
        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <TextView


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"

        android:text="@string/tv_title_in_write_article"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline8c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarWriteArticle"


        />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="title"
        android:background="@drawable/shape_empty"
        android:inputType="text"
        android:lines="2"

        android:maxLines="5"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="4dp"
        android:paddingBottom="8dp"
        android:textAlignment="viewStart"


        android:textColorHint="@color/hint_search"
        app:layout_constraintBottom_toTopOf="@id/guideline24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineTop3" />

    <TextView
        android:id="@+id/textOfArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_text_of_article"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline25"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/edit_title"


        />


    <EditText
        android:id="@+id/editTextOfWriteArticle"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_empty"
        android:inputType="text"
        android:lines="8"
        android:paddingStart="4dp"
        android:paddingTop="32dp"
        android:paddingEnd="4dp"
        android:paddingBottom="8dp"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@id/guideline25"

        />

    <TextView
        android:id="@+id/textAddAttach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_add_attach"
        android:textColor="@color/black"
        android:textSize="16sp"

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextOfWriteArticle"


        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cos"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_dash_border_btn"
        android:drawableStart="@drawable/ic_media_icon"
        android:elevation="2dp"
        android:paddingStart="60dp"
        android:paddingEnd="40dp"
        android:text="@string/add_media"
        android:textSize="18sp"

        app:layout_constraintTop_toBottomOf="@id/textAddAttach"
        app:strokeColor="#363636"
        app:strokeWidth="2dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUploadFile"
        style="@style/social_button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:text="@string/tv_upload_file"


        app:layout_constraintTop_toBottomOf="@id/cos" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_keyword"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUploadFile"

        />


    <HorizontalScrollView
        android:id="@+id/scrollKeyword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_keyword"

        >

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:text="@string/tv_economy"
                android:textColor="#363636"
                android:textSize="16sp"
                app:chipIcon="@drawable/ic_baseline_close_24"

                />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"

        android:elevation="2dp"
        android:fontFamily="@font/is_font"

        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/tv_submit_article"
        android:textSize="18sp"
        android:textStyle="bold"

        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/scrollKeyword"


        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14216689" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8c"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.124487005" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19835842" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24487004" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25581396" />


</androidx.constraintlayout.widget.ConstraintLayout>