<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="#ffffff"
    android:layoutDirection="rtl"
    app:cardCornerRadius="12dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_image_post_prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_of_profile_desc"
            android:src="@drawable/prof_image"


            app:layout_constraintStart_toEndOf="@id/guidelineLeft2"

            app:layout_constraintTop_toBottomOf="@id/guidelineTop2" />

        <TextView
            android:id="@+id/item_tv_name_post_prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:text="@string/tv_name"
            android:textAlignment="viewEnd"
            android:textColor="#363636"
            android:textSize="14sp"
            android:textStyle="bold"

            app:layout_constraintStart_toEndOf="@id/item_image_post_prof"
            app:layout_constraintTop_toTopOf="@id/item_image_post_prof"


            />

        <TextView
            android:id="@+id/tv_date_of_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="1dp"
            android:text="@string/date_of_post"
            android:textAlignment="viewEnd"
            android:textColor="#9e9e9e"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/item_image_post_prof"

            app:layout_constraintStart_toEndOf="@id/item_image_post_prof"
            app:layout_constraintTop_toBottomOf="@id/item_tv_name_post_prof"

            />

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/is_font"

            android:lineSpacingExtra="10sp"
            android:text="@string/tv_item_title"
            android:textAlignment="viewStart"
            android:textColor="#363636"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/guidelineBottom2"
            app:layout_constraintEnd_toStartOf="@id/guidelineRight2"
            app:layout_constraintStart_toEndOf="@id/guidelineLeft2"

            app:layout_constraintTop_toBottomOf="@id/item_image_post_prof"

            />


        <ImageView
            android:id="@+id/item_icon_tag_pot_prof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tag_icon_post"

            app:layout_constraintEnd_toStartOf="@id/guidelineRight2"
            app:layout_constraintTop_toTopOf="@id/item_image_post_prof"

            app:srcCompat="@drawable/ic_bookmark" />


        />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04136253" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.96107054" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineTop2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.06225681" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineBottom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8088737" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>