<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"

            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share_article_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#807F81"
                android:elevation="2dp"
                android:fontFamily="@font/is_font"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/tv_share_article"
                android:textSize="18sp"
                app:cornerRadius="8dp"
                app:layout_constraintTop_toTopOf="parent"


                />

            <com.google.android.material.button.MaterialButton
                android:elevation="2dp"
                android:id="@+id/edit_article_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="#286de6"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:fontFamily="@font/is_font"
                android:text="@string/tv_edit_article"
                android:textSize="18sp"
                app:cornerRadius="8dp"
                app:layout_constraintTop_toBottomOf="@id/share_article_btn"


                />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/delete_article_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:elevation="2dp"
                android:layout_marginBottom="8dp"
                android:paddingTop="8dp"

                android:paddingBottom="8dp"
                android:backgroundTint="#ff5a5a"
                android:fontFamily="@font/is_font"
                android:text="@string/tv_delete_article"


                android:textSize="18sp"
                app:cornerRadius="8dp"

                app:layout_constraintTop_toBottomOf="@id/edit_article_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>